--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -1,38 +1,39 @@
-.about{
-    padding-bottom: 48px;
+.about {
+  padding-bottom: 48px;
 }
 
-.about-top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.about-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.about-info{
-    font-size: 24px;
-}
-
-.info-name{
-    color: blue;
-    font-size: 32px;
-}
-
-@media only screen and (max-width: 720px) {
-    .about-top{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-.picture{
-    height: 280px;
-}
-
-.about-info{
-    font-size: 20px;
+.about-info {
+  font-size: 24px;
 }
 
 .info-name {
-    font-size: 26px;
+  color: blue;
+  font-size: 32px;
+}
+
+@media only screen and (max-width: 720px) {
+  .about-top {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.picture {
+  height: max-content;
+  margin: 4px;
+}
+
+.about-info {
+  font-size: 20px;
+}
+
+.info-name {
+  font-size: 26px;
 }
