--- a/src/components/body/contact/contact.css
+++ b/src/components/body/contact/contact.css
@@ -3,6 +3,10 @@
   flex-direction: column;
   flex: 1;
 }
+.picture {
+  height: 200px;
+  width: 195px;
+}
 .section-title {
   font-size: 32px;
   font-weight: 700;
@@ -20,7 +24,7 @@
   text-align: center;
 }
 .download {
-  background-color: aquamarine;
+  background-color: rgb(65, 235, 164);
   padding: 8px 16px;
   font-size: 24px;
   display: flex;
