--- a/src/components/body/skills/skills.css
+++ b/src/components/body/skills/skills.css
@@ -18,9 +18,10 @@
 .skills-list {
   display: flex;
   flex-wrap: wrap;
-  max-width: 70%;
-  justify-content: flex-end;
+  margin: 16px 0px;
+  justify-content: space-between;
 }
+
 @media only screen and (max-width: 720px) {
   .skills-list {
     max-width: 100%;
