--- a/src/components/body/work/work-card.css
+++ b/src/components/body/work/work-card.css
@@ -31,7 +31,33 @@
   text-overflow: ellipsis;
   max-width: 80%;
 }
-
+.work-links a{
+  text-decoration: none;
+  color: black;
+  }
+  
+  .work-links{
+      margin-top: 6px;
+      display: flex;
+  }
+  
+  .link-button{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: aquamarine;
+      width: max-content;
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 16px;
+      margin-right: 6px;
+  }
+  
+  .link-button i{
+      display: flex;
+      align-items: center;
+      margin-right: 4px;
+  }
 @media only screen and (max-width: 720px) {
   .work-card {
     width: 100%;
